[package]

name = "freetype-sys-nopng"
version = "0.24.0"
authors = ["crumblingstatue"]
links = "freetype"
build = "build.rs"
keywords = ["freetype", "ffi"]
description = "Low level binding for FreeType font library (PNG support disabled)"
license = "MIT"
readme = "README.md"
edition = "2024"

[features]
bundled = []

[build-dependencies]
cc = "1"
pkg-config = "0.3.11"
